--- a/StartScreen.html
+++ b/StartScreen.html
@@ -1,80 +1,11 @@
 <!doctype html>
 <html>
 <head>
-<meta charset="UTF-8">
-<title> StartScreen </title>
-<style>
-	@font-face {
-  font-family: 'Electrolize';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Electrolize'), local('Electrolize-Regular'), url(http://themes.googleusercontent.com/static/fonts/electrolize/v2/DDy9sgU2U7S4xAwH5thnJ4bN6UDyHWBl620a-IRfuBk.woff) format('woff');
-	}
-	.center {
-	margin: auto;
-	width: 1000px;
-	height: 600px;
-	background-color: #E1D5C1;
-	border: 1px solid black;
-	}
-	
-	#coffeequest {
-	color: #E8CD89;
-	text-align: center;
-	font-family: 'Electrolize';
-	font-size: 98px;
-	}
-	#start {
-		width: 10%;
-		height: auto;
-		border-style:outset; border-color: #2F9080;
-    	border-width: 5px;
-		text-align: center;
-		margin-left: 440px;
-		font-family: 'Electrolize';
-		font-size: 28px;
-		color: #E8CD89;
-	}
-	#directions {
-		width: 20%;
-		height: auto;
-		border-style:outset; border-color: #2F9080;
-    	border-width: 5px;
-		text-align: center;
-		display: inline-block;
-		margin-left: 207px;
-		font-family: 'Electrolize';
-		font-size: 28px;
-		color: beige;
-	}
-	#options {
-		width: 15%;
-		height: auto;
-		border-style:outset; border-color: #2F9080;
-    	border-width: 5px;
-		text-align: center;
-		display: inline-block;
-		margin-left: 18px;
-		font-family: 'Electrolize';
-		font-size: 28px;
-		color: beige;
-	}
-	#credits {
-		width: 15%;
-		height: auto;
-		border-style:outset; border-color: #2F9080;
-    	border-width: 5px;
-		text-align: center;
-		display: inline-block;
-		margin-left: 18px;
-		font-family: 'Electrolize';
-		font-size: 28px;
-		color: beige;
-	}
-	
-</style>
+	<meta charset="UTF-8">
+	<title> StartScreen </title>
+	<link rel="stylesheet" href="css/main.css"/>
 </head>
-<!--<canvas id="myCanvas" width="1000" height="600" style="border:1px solid"></canvas>-->
+
 <body>
 <!-- Start here -->
     <div data-role="page" id="choose" class="center" style="background-image: url(coffee.jpg); height: 600; width: 900px; border: 1px solid black; align-self:center; margin:auto">
@@ -84,10 +15,10 @@
         <br><br>
 <h1 id= "coffeequest"> COFFEE QUEST </h1>
     	</header>
-    	
+
       <br> <br>
       <br><br>
-      
+
         <footer>
         	   <a href="index3.html">
                		<p id= "start"> START </p>
@@ -101,5 +32,5 @@
                </a>
         </footer>
         </div>
-</body> 
+</body>
 </html>
