Fixed StartScreen.html errors

--- a/html/Credits.html
+++ b/html/Credits.html
@@ -19,7 +19,7 @@
 		<p id="instruct3"> 3) Thanks to the endless supply of <b> coffee</b>, food, snacks, and drinks provided by Technica. Having a safe and comfortable place to unite together as women in the STEM field has been a surreal experience.</p>
 		<!-- rule #3 -->
 		<br> <br>
-		<a href="StartScreen.html">
+		<a href="index.html">
 			<h3>CLOSE</h3>
 		</a>
 	</div>
