--- a/html/Directions.html
+++ b/html/Directions.html
@@ -15,7 +15,7 @@
 			<p id="instruct3">3) There will be different opponents for each stage, each one a Tea Bandit. Jump on a bandit to defeat it and gain HP points. </p>  <!-- rule #3 -->
 			<p id="instruct4"> 4) In the final stage, you will meet your greatest opponent of all, Cha, leader of the Tea Bandits. If you defeat him, you will be given a wish. Choose wisely.   </p> <!-- rule #4 -->
 
-			<a href="StartScreen.html">
+			<a href="index.html">
 				<h3> CLOSE </h3>
 			</a>
 		</div>
