--- a/html/GameOver.html
+++ b/html/GameOver.html
@@ -15,7 +15,7 @@
 In its weakened state, Coffeelandia was overtaken by foreign lands.
 The kingdom was utterly obliterated and dissolved into surrounding territories. <!-- rule #1 -->
 			<br> <br>
-			<a href="StartScreen.html">
+			<a href="index.html">
 				<h3> GAME OVER </h3>
 			</a>
 
