--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<br><br>
 		<br><br>
 		<footer>
-			<a href="index.html">
+			<a href="html/Start.html">
 				<p id="start">START</p>
 			</a>
 			<a href="html/Directions.html">
